[package]
name = "OllamaDriver"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
serde_json = "1.0.140"
sha2 = "0.10"
redis = "0.24.0"
